# fast_api_test_1

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
tests/: conftest.py
tests/api/: test_users_api.py
tests/services/: test_users_service.py
users_crm/: config.py  constance.py  init_db.py
users_crm/api/: auth.py  dependencies.py  routers.py  users.py
users_crm/db/: mongo_motor_client.py
users_crm/repositories/: mongo_motor.py  rabbit_mq.py  users.py
users_crm/repositories/abstract/: msg_broker.py  nosql.py
users_crm/schemas/: auth.py  users.py
users_crm/services/: auth.py  users.py
